--- a/OOP/OOP/OOP.csproj
+++ b/OOP/OOP/OOP.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientLogic.cs" />
     <Compile Include="DataManager.cs" />
     <Compile Include="Login_Form.cs">
       <SubType>Form</SubType>
