NetManager Class и тесты для него

--- a/OOP/OOP/OOP.csproj
+++ b/OOP/OOP/OOP.csproj
@@ -49,8 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientLogic.cs" />
     <Compile Include="DataManager.cs" />
+    <Compile Include="NetManeger.cs" />
     <Compile Include="Login_Form.cs">
       <SubType>Form</SubType>
     </Compile>
