--- a/OOP/OOPTests/OOPTests.csproj
+++ b/OOP/OOPTests/OOPTests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="DataManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NetManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
